# ultra_ascii_studio

./: .gitignore  ASCIIStudio.spec  ASCIIStudio_OnlineInstaller.spec  ASCIIStudio_WebBootstrap.spec  BUILD_AND_INSTALLER_INSTRUCTIONS_RU.md  CODE_OF_CONDUCT.md  LICENSE  README.md  REMOTE_UPDATE_GUIDE_RU.md  SECURITY.md  advanced_editor.py  ascii_studio_qt.py  build_release.bat  core_utils.py  export_progress.py  help.txt  mini_player.py  online_installer_qt.py  render_worker.py  settings_store.py  update_manifest.example.json  update_manifest.json  web_bootstrap_installer.py
.github/workflows/: build-installers-matrix.yml
android_app/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
ascii_studio_qt/: ascii_studio_qt.py  core_utils.py  export_progress.py  mini_player.py  render_worker.py  settings_store.py  translations.json  ultra_ascii_studio.slnx
hybrid_nextgen/: CMakeLists.txt  README_RU.md
hybrid_nextgen/qml/: main.qml
hybrid_nextgen/src/: ascii_engine.cpp  ascii_engine.h  main.cpp
packaging/: README_RU.md  assemble_release_bundle.py  build_linux.sh  build_macos.sh  build_windows.ps1  publish_release.ps1
project2/: fullscreen_viewer.py  gallery.py  localization.py  main.py  render_core.py  settings.json  settings_dialog.py  themes.py  trail_effect.py  ui_main.py  utils.py
ultra_ascii_studio/: ascii_studio_qt — копия.py  ultra_ascii_studio.py  ultra_ascii_studio.pyproj  ultra_ascii_ui_v2.py  ultra_ascii_ui_v3.py  ultra_ascii_ui_v5.py  vav.py
(+31 files in other folders)
